tests/errors/link-attr-non-extern.milo
// @error: only an 'extern fn'
@link("SDL2")
fn notExtern(): i32 {
    return 0
}

fn main(): i32 {
    return notExtern()
}
